[tool.poetry]
name = "skyport"
version = "0.1.0"
description = "An interface for consuming space agency APIs programmatically."
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
taskipy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coverage = {extras = ["toml"], version = "^7.6.12"}
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
preview = true
select = [
    "I",   # isort
    "F",   # pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "PL",  # pylint
    "B",   # flake8-bugbear
    "T20", # flake8-print
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["D205", "E501", "D107"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"nasa.py" = ["PLR0917", "PLR0913"]
"__init__.py" = ["F403"]
"tests/*" = ["D"]
"skyport/types/*" = ["D"]
"skyport/exceptions/*" = ["D101"]
"**/**/__init__.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
omit = ["**/*test*.py"]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test.py tests.py test_*.py tests_*.py *_test.py *_tests.py"

[tool.taskipy.tasks]
lint = "ruff check .; ruff check . --diff"
format = "ruff format .; ruff check . --fix"
radon = 'radon cc ./skyport -a -na'
test = "pytest -s -x --cov=skyport -v"
post_test = "coverage html"